--- a/index.html
+++ b/index.html
@@ -12,445 +12,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       rel="stylesheet"
     />
-    <style>
-      :root {
-        --primary-color: #4a90e2;
-        --secondary-color: #5ab9ea;
-        --background-color: #1a1b41;
-        --text-color: #ffffff;
-        --hover-color: #6ec6ff;
-        --card-bg-color: rgba(255, 255, 255, 0.05);
-      }
-
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: "Poppins", sans-serif;
-        background-color: var(--background-color);
-        color: var(--text-color);
-        line-height: 1.6;
-      }
-
-      .container {
-        display: flex;
-        height: calc(100vh - 100px);
-      }
-
-      .sidebar {
-        width: 250px;
-        background-color: rgba(26, 27, 65, 0.8);
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        animation: slideIn 0.5s ease-in-out;
-      }
-
-      @keyframes slideIn {
-        from {
-          transform: translateX(-100%);
-        }
-        to {
-          transform: translateX(0);
-        }
-      }
-
-      .logo {
-        width: 100px;
-        margin-bottom: 20px;
-        align-self: center;
-        animation: fadeIn 0.5s ease-in-out;
-      }
-
-      .nav-item {
-        padding: 10px;
-        margin-bottom: 10px;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease, transform 0.3s ease;
-        display: flex;
-        align-items: center;
-      }
-
-      .nav-item i {
-        margin-right: 10px;
-      }
-
-      .nav-item:hover {
-        background-color: var(--primary-color);
-        transform: translateX(10px);
-      }
-
-      .main-content {
-        flex-grow: 1;
-        padding: 40px;
-        overflow-y: auto;
-        animation: fadeIn 0.5s ease-in;
-      }
-
-      h1,
-      h2 {
-        color: var(--secondary-color);
-        margin-bottom: 20px;
-      }
-
-      .upload-btn {
-        display: inline-block;
-        padding: 10px 20px;
-        background-color: var(--primary-color);
-        color: white;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease, transform 0.3s ease;
-        margin-bottom: 20px;
-      }
-
-      .upload-btn:hover {
-        background-color: var(--hover-color);
-        transform: scale(1.05);
-      }
-
-      #songList {
-        list-style-type: none;
-        padding: 0;
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-        gap: 20px;
-      }
-
-      #songList li {
-        cursor: pointer;
-        padding: 15px;
-        background-color: var(--card-bg-color);
-        border-radius: 10px;
-        transition: background-color 0.3s ease, transform 0.3s ease;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-      }
-
-      #songList li:hover {
-        background-color: rgba(90, 185, 234, 0.3);
-        transform: translateY(-5px);
-      }
-
-      .song-cover {
-        width: 150px;
-        height: 150px;
-        background-color: var(--primary-color);
-        border-radius: 5px;
-        margin-bottom: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 50px;
-        color: var(--text-color);
-      }
-
-      .song-title {
-        font-weight: 600;
-        margin-bottom: 5px;
-      }
-
-      .song-artist {
-        font-size: 0.9em;
-        opacity: 0.7;
-      }
-
-      .delete-btn {
-        background: none;
-        border: none;
-        color: var(--text-color);
-        cursor: pointer;
-        font-size: 1.2em;
-        opacity: 0.7;
-        transition: opacity 0.3s ease, transform 0.3s ease;
-        margin-top: 10px;
-      }
-
-      .delete-btn:hover {
-        opacity: 1;
-        transform: scale(1.1);
-      }
-
-      .player {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: rgba(26, 27, 65, 0.9);
-        padding: 15px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: 100px;
-        animation: slideUp 0.5s ease-in-out;
-      }
-
-      @keyframes slideUp {
-        from {
-          transform: translateY(100%);
-        }
-        to {
-          transform: translateY(0);
-        }
-      }
-
-      .player-controls {
-        display: flex;
-        align-items: center;
-      }
-
-      .player-btn {
-        background: none;
-        border: none;
-        color: var(--text-color);
-        font-size: 24px;
-        margin: 0 10px;
-        cursor: pointer;
-        transition: color 0.3s ease, transform 0.3s ease;
-      }
-
-      .player-btn:hover {
-        color: var(--hover-color);
-        transform: scale(1.2);
-      }
-
-      .progress-container {
-        flex-grow: 1;
-        height: 5px;
-        background-color: rgba(255, 255, 255, 0.1);
-        cursor: pointer;
-        margin: 0 20px;
-        border-radius: 2.5px;
-        overflow: hidden;
-      }
-
-      .progress-bar {
-        height: 100%;
-        background-color: var(--secondary-color);
-        width: 0;
-        transition: width 0.1s linear;
-      }
-
-      #nowPlaying {
-        min-width: 200px;
-        text-align: right;
-      }
-
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-        }
-        to {
-          opacity: 1;
-        }
-      }
-
-      .fade-in {
-        animation: fadeIn 0.5s ease-in;
-      }
-
-      .drop-area {
-        border: 2px dashed var(--secondary-color);
-        border-radius: 20px;
-        width: 100%;
-        margin: 20px 0;
-        padding: 20px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        transition: background-color 0.3s ease, transform 0.3s ease;
-      }
-
-      .drop-area.highlight {
-        background-color: rgba(90, 185, 234, 0.1);
-        transform: scale(1.05);
-      }
-
-      .drop-area i {
-        font-size: 48px;
-        color: var(--secondary-color);
-        margin-bottom: 10px;
-      }
-
-      .search-container {
-        margin: 20px 0;
-        display: flex;
-        align-items: center;
-      }
-
-      .search-container input {
-        flex-grow: 1;
-        padding: 10px;
-        border: none;
-        border-radius: 20px;
-        background-color: rgba(255, 255, 255, 0.1);
-        color: var(--text-color);
-        font-size: 16px;
-        transition: background-color 0.3s ease;
-      }
-
-      .search-container input::placeholder {
-        color: rgba(255, 255, 255, 0.5);
-      }
-
-      .search-container input:focus {
-        background-color: rgba(255, 255, 255, 0.2);
-      }
-
-      .search-container button {
-        background: none;
-        border: none;
-        color: var(--secondary-color);
-        font-size: 20px;
-        cursor: pointer;
-        margin-left: 10px;
-        transition: transform 0.3s ease;
-      }
-
-      .search-container button:hover {
-        transform: scale(1.1);
-      }
-
-      .volume-control {
-        display: flex;
-        align-items: center;
-        margin-left: 20px;
-      }
-
-      .volume-icon {
-        color: var(--text-color);
-        font-size: 18px;
-        margin-right: 10px;
-      }
-
-      .volume-slider {
-        -webkit-appearance: none;
-        width: 100px;
-        height: 5px;
-        border-radius: 2.5px;
-        background: rgba(255, 255, 255, 0.1);
-        outline: none;
-      }
-
-      .volume-slider::-webkit-slider-thumb {
-        -webkit-appearance: none;
-        appearance: none;
-        width: 15px;
-        height: 15px;
-        border-radius: 50%;
-        background: var(--secondary-color);
-        cursor: pointer;
-        transition: background-color 0.3s ease, transform 0.3s ease;
-      }
-
-      .volume-slider::-webkit-slider-thumb:hover {
-        background: var(--hover-color);
-        transform: scale(1.2);
-      }
-
-      .volume-slider::-moz-range-thumb {
-        width: 15px;
-        height: 15px;
-        border-radius: 50%;
-        background: var(--secondary-color);
-        cursor: pointer;
-        transition: background-color 0.3s ease, transform 0.3s ease;
-      }
-
-      .volume-slider::-moz-range-thumb:hover {
-        background: var(--hover-color);
-        transform: scale(1.2);
-      }
-
-      #visualizer {
-        width: 100%;
-        height: 50px;
-        background-color: rgba(255, 255, 255, 0.05);
-        margin-top: 20px;
-        border-radius: 5px;
-      }
-
-      .playlists-container {
-        margin-top: 30px;
-      }
-
-      .playlist {
-        background-color: var(--card-bg-color);
-        border-radius: 10px;
-        padding: 15px;
-        margin-bottom: 15px;
-        cursor: pointer;
-        transition: background-color 0.3s ease, transform 0.3s ease;
-      }
-
-      .playlist:hover {
-        background-color: rgba(90, 185, 234, 0.3);
-        transform: translateY(-5px);
-      }
-
-      .playlist h3 {
-        margin-bottom: 10px;
-      }
-
-      .playlist-songs {
-        font-size: 0.9em;
-        opacity: 0.7;
-      }
-
-      /* Media Queries for Mobile */
-      @media (max-width: 768px) {
-        .container {
-          flex-direction: column;
-        }
-
-        .sidebar {
-          width: 100%;
-          height: auto;
-          flex-direction: row;
-          justify-content: space-around;
-          padding: 10px;
-        }
-
-        .main-content {
-          padding: 20px;
-        }
-
-        .nav-item {
-          padding: 5px;
-          margin-bottom: 0;
-          margin-right: 5px;
-          flex-grow: 1;
-          justify-content: center;
-        }
-
-        .logo {
-          width: 50px;
-          margin-bottom: 0;
-        }
-
-        .player {
-          flex-direction: column;
-          height: auto;
-          padding: 10px;
-        }
-
-        .progress-container {
-          margin: 10px 0;
-        }
-
-        #nowPlaying {
-          text-align: center;
-          margin-top: 10px;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="flow-styles.css" />
   </head>
   <body>
     <div class="container">
@@ -460,43 +22,71 @@
           alt="Flow Logo"
           class="logo"
         />
-        <div class="nav-item"><i class="fas fa-home"></i> Inicio</div>
-        <div class="nav-item"><i class="fas fa-music"></i> Tu Biblioteca</div>
-        <div class="nav-item"><i class="fas fa-search"></i> Buscar</div>
-        <div class="nav-item"><i class="fas fa-list"></i> Playlists</div>
+        <div class="nav-item" data-view="home">
+          <i class="fas fa-home"></i> Inicio
+        </div>
+        <div class="nav-item" data-view="library">
+          <i class="fas fa-music"></i> Tu Biblioteca
+        </div>
+        <div class="nav-item" data-view="search">
+          <i class="fas fa-search"></i> Buscar
+        </div>
+        <div class="nav-item" data-view="playlists">
+          <i class="fas fa-list"></i> Playlists
+        </div>
       </div>
       <div class="main-content">
-        <h1 class="fade-in">Bienvenido a Flow</h1>
-        <div id="drop-area" class="drop-area fade-in">
-          <i class="fas fa-cloud-upload-alt"></i>
-          <p>
-            Arrastra y suelta archivos de música aquí o haz clic para
-            seleccionar
-          </p>
-          <input type="file" id="fileUpload" accept="audio/*" multiple hidden />
+        <div id="homeView" class="view">
+          <h1 class="fade-in">Bienvenido a Flow</h1>
+          <div id="drop-area" class="drop-area fade-in">
+            <i class="fas fa-cloud-upload-alt"></i>
+            <p>
+              Arrastra y suelta archivos de música aquí o haz clic para
+              seleccionar
+            </p>
+            <input
+              type="file"
+              id="fileUpload"
+              accept="audio/*"
+              multiple
+              hidden
+            />
+          </div>
+          <div class="search-container fade-in">
+            <input
+              type="text"
+              id="searchInput"
+              placeholder="Buscar canciones..."
+            />
+            <button id="searchButton"><i class="fas fa-search"></i></button>
+          </div>
         </div>
-        <div class="search-container fade-in">
-          <input
-            type="text"
-            id="searchInput"
-            placeholder="Buscar canciones..."
-          />
-          <button id="searchButton"><i class="fas fa-search"></i></button>
+        <div id="libraryView" class="view" style="display: none">
+          <h2 class="fade-in">Tu Biblioteca</h2>
+          <ul id="songList" class="fade-in"></ul>
         </div>
-        <h2 class="fade-in">Tu Biblioteca</h2>
-        <ul id="songList" class="fade-in"></ul>
+        <div id="searchView" class="view" style="display: none">
+          <h2 class="fade-in">Buscar</h2>
+          <div class="search-container fade-in">
+            <input
+              type="text"
+              id="globalSearchInput"
+              placeholder="Buscar en toda tu biblioteca..."
+            />
+            <button id="globalSearchButton">
+              <i class="fas fa-search"></i>
+            </button>
+          </div>
+          <ul id="searchResults" class="fade-in"></ul>
+        </div>
+        <div id="playlistsView" class="view" style="display: none">
+          <h2 class="fade-in">Tus Playlists</h2>
+          <div
+            id="playlistsContainer"
+            class="playlists-container fade-in"
+          ></div>
+        </div>
         <canvas id="visualizer"></canvas>
-        <div class="playlists-container">
-          <h2>Tus Playlists</h2>
-          <div class="playlist">
-            <h3>Mi lista favorita</h3>
-            <p class="playlist-songs">10 canciones</p>
-          </div>
-          <div class="playlist">
-            <h3>Para trabajar</h3>
-            <p class="playlist-songs">15 canciones</p>
-          </div>
-        </div>
       </div>
     </div>
     <div class="player">
