--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
       <div class="progress-container" id="progressContainer">
         <div class="progress-bar" id="progressBar"></div>
       </div>
+      <div class="time-display">
+        <span id="currentTime">0:00</span>
+        <span>/</span>
+        <span id="totalTime">0:00</span>
+      </div>
     </div>
     <div class="player-right">
       <div class="volume-control">
