--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
 </head>
 
 <body>
+  <div class="stars"></div>
+  <div class="twinkling"></div>
+
   <div id="notification" class="notification" style="display: none;">
     <p>¡La colaboración con Nulled saldrá en algún momento de julio!</p>
     <img src="moveit_flow.png" alt="Move It - 1000+ canciones disponibles" style="max-width: 100%; height: auto;">
     <button id="closeNotification">Cerrar</button>
   </div>
+
   <div class="container">
     <aside class="sidebar">
       <img
@@ -64,7 +68,7 @@
         </div>
         <ul id="searchResults"></ul>
       </div>
-      <div id="settingsView" class="view">
+      <div id="settingsView" class="view" style="display:none;">
         <h2 class="settings-title">Ajustes</h2>
         <div class="settings-section">
           <div class="setting-item">
@@ -78,7 +82,6 @@
             </label>
           </div>
         </div>
-        <p class="settings-message">Más ajustes estarán disponibles próximamente.</p>
       </div>
     </main>
   </div>
