Mejora del css y añadido botón GitHub

--- a/index.html
+++ b/index.html
@@ -163,5 +163,12 @@
     </div>
     <audio id="audioPlayer"></audio>
     <script src="flow-scripts.js"></script>
+    <a
+      href="https://github.com/Glazzier/Flow-V2"
+      target="_blank"
+      class="github-button"
+    >
+      <i class="fab fa-github"></i> Ayúdanos a mejorar
+    </a>
   </body>
 </html>
