--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flow - Tu reproductor de música local</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
@@ -13,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="flow-styles.css" />
-  </head>
+</head>
 
   <body>
     <div class="stars"></div>
