--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flow - Tu reproductor de música local</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="flow-styles.css" />
-</head>
+  </head>
 
   <body>
     <div class="stars"></div>
@@ -69,9 +69,6 @@
         </div>
         <div id="playlistsView" class="view" style="display: none">
           <h2>Tus Playlists</h2>
-          <button id="createPlaylistBtn" class="btn">
-            Crear Nueva Playlist
-          </button>
           <ul id="playlistList"></ul>
         </div>
         <div id="searchView" class="view" style="display: none">
